test/tests/stages/18_structures/invalid_types/extra_credit/union_tag_resolution/address_of_wrong_union_type.parse
-- Lexing ... OK
-- Parsing ... OK
+
+
@@ C AST @@
CProgram: 
  List[2]: 
    CStructDecl: 
      CStructDeclaration: 
        TIdentifier: u
        Bool: 1
        List[2]: 
          CMemberDeclaration: 
            TIdentifier: i
            Int: 
          CMemberDeclaration: 
            TIdentifier: c
            Char: 
    CFunDecl: 
      CFunctionDeclaration: 
        TIdentifier: main
        List[0]: 
        CB: 
          List[3]: 
            CD: 
              CVarDecl: 
                CVariableDeclaration: 
                  TIdentifier: foo
                  CCompoundInit: 
                    List[1]: 
                      CSingleInit: 
                        CConstant: 
                          CConstInt: 
                            TInt: 0
                          None: 
                        None: 
                    None: 
                  Structure: 
                    TIdentifier: u
                    Bool: 1
                  None: 
            CD: 
              CStructDecl: 
                CStructDeclaration: 
                  TIdentifier: u
                  Bool: 1
                  List[2]: 
                    CMemberDeclaration: 
                      TIdentifier: i
                      Int: 
                    CMemberDeclaration: 
                      TIdentifier: c
                      Char: 
            CD: 
              CVarDecl: 
                CVariableDeclaration: 
                  TIdentifier: ptr
                  CSingleInit: 
                    CAddrOf: 
                      CVar: 
                        TIdentifier: foo
                        None: 
                      None: 
                    None: 
                  Pointer: 
                    Structure: 
                      TIdentifier: u
                      Bool: 1
                  None: 
        FunType: 
          TULong: 67108864
          TULong: 67108864
          List[0]: 
          Int: 
        None: 
